--- a/.github/workflows/sync-image-test.yml
+++ b/.github/workflows/sync-image-test.yml
@@ -21,9 +21,9 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: registry.cn-hangzhou.aliyuncs.com
-        username: leozheng_ali
+        username: 美守安
         password: Shit-123
         logout: false
 
     - name: Use Skopeo Tools Sync Docker Image from Docker Hub
-      run: skopeo copy docker://docker.io/portainer/portainer-ce:latest docker://registry.cn-hangzhou.aliyuncs.com/msic/portainer-ce:2.19.5
+      run: skopeo copy docker://docker.io/harryliu888/funasr-online-server:latest docker://registry.cn-hangzhou.aliyuncs.com/msig/funasr-online-server:latest
