--- a/.github/workflows/sync-image-test.yml
+++ b/.github/workflows/sync-image-test.yml
@@ -26,4 +26,4 @@ jobs:
         logout: false
 
     - name: Use Skopeo Tools Sync Docker Image from Docker Hub
-      run: skopeo copy docker://docker.io/portainer/portainer-ce:2.27 docker://registry.cn-hangzhou.aliyuncs.com/msig/portainer-ce:2.27
+      run: skopeo copy docker://docker.io/portainer/portainer-ce:lts docker://registry.cn-hangzhou.aliyuncs.com/msig/portainer-ce:2.27
